--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.14",
     "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
@@ -15,7 +16,6 @@
     "react-lazy-load-image-component": "^1.6.0",
     "react-modal-image": "^2.6.0",
     "react-responsive-carousel": "^3.2.23",
-    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.20.0",
     "react-scripts": "^5.0.1",
     "react-spinners": "^0.13.8",
